fix: increase service-intro h2 line-height for more space between wrapped lines (#153)

--- a/css/pages.css
+++ b/css/pages.css
@@ -1416,7 +1416,7 @@ body.isms-modal-open {
 
 .service-intro h2 {
   font-size: 60px;
-  line-height: 55px;
+  line-height: 72px;
   letter-spacing: 0.3px;
 }
 
